Archive/6856f1afd74e2c9e7ad6f21b11482c84-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In constructor ‘MyClass::MyClass()’:
main.cpp:12:38: error: ‘memset’ was not declared in this scope
    memset(rect, 0, 4 * sizeof(double)); 
                                      ^
